# deeptcn

./: .gitignore  LICENSE  README.md  pyproject.toml  test.ipynb  test.py
.github/workflows/: python-package.yml
datasets/electricity/: electricity_test.csv
deeptcn/: __init__.py  base.py  data.py  gaussian_deeptcn.py  quantile_deeptcn.py  test.py  utils.py
examples/: electricity.ipynb
